# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  semgrep.yaml
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/workflows/: lint.yaml
.github/workflows/: release-drafter.yaml  workflows.yaml
python_template/: placeholder.py
python_template/tests/: test_placeholder.py
