[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = []
packages = []

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^22.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
mypy = "^0.991"
coverage = "^6.5.0"
pytest = "^7.2.0"
bandit = {extras = ["toml"], version = "^1.7.4"}
black = "^22.12.0"
autoflake = "^2.0.0"
debugpy = "^1.6.4"
flake8 = "^6.0.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.6.0"
isort = "^5.11.1"
pylint = "^2.15.8"
deepdiff = "^6.2.2"
semgrep = "^1.1.0"
pytest-check = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
recursive = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"

lines_after_imports = 2
